correcting several errors with display colors when changed themes

--- a/src/Shared/Header/header.scss
+++ b/src/Shared/Header/header.scss
@@ -12,6 +12,10 @@
     align-items: center;
     & .navbar-app__brand {
       border: none;
+
+      & img {
+        width: 30px;
+      }
     }
   }
 
