--- a/src/Theme/dark_theme.scss
+++ b/src/Theme/dark_theme.scss
@@ -56,7 +56,7 @@
       }
 
       &.form_wrong_theme {
-        box-shadow: 0 0 1px $color_danger;
+        box-shadow: 0 0 3px $color_danger;
 
         &:hover {
           box-shadow: 0 0 1px $color_danger;
@@ -73,6 +73,11 @@
         transition: background-color .5s;
         background-color: $color_primary_dark;
         color: $color_secondary;
+        &:-webkit-autofill {
+          -webkit-box-shadow: inset 0 0 0 50px $color_primary_dark !important;
+          color: $color_secondary;
+          transition: .5s box-shadow, .5s color;
+        }
 
         &::placeholder {
           color: $color_secondary
@@ -89,7 +94,7 @@
 
     & .navbar-app__brand-body {
       & .navbar-app__brand {
-        color: $color_success
+        color: $color_success;
       }
     }
 
