--- a/src/Theme/dark_theme.scss
+++ b/src/Theme/dark_theme.scss
@@ -73,6 +73,7 @@
         transition: background-color .5s;
         background-color: $color_primary_dark;
         color: $color_secondary;
+
         &:-webkit-autofill {
           -webkit-box-shadow: inset 0 0 0 50px $color_primary_dark !important;
           color: $color_secondary;
@@ -133,6 +134,40 @@
           color: gray;
           padding-right: 20px;
         }
+      }
+    }
+  }
+
+  .main {
+
+    &__body_theme {
+      border-top: 2px solid $color_lite;
+      border-bottom: 2px solid $color_lite;
+    }
+
+    &__left-menu_theme {
+      background-color: $color_body_dark;
+      border: 1px solid $color_lite;
+    }
+
+    &__left-menu-item_theme {
+      background-color: $color_body_dark;
+      border: 1px solid $color_lite;
+      transition: .3s background-color;
+
+      &:hover {
+        background-color: $color_lite;
+        transition: .3s background-color;
+
+        & p {
+          color: $color_body_dark;
+          transition: .3s color;
+        }
+      }
+
+      & p {
+        color: $color_lite;
+        transition: .3s color;
       }
     }
   }
