--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
 }
+
+.body-container {
+  padding-top: 40px;
+  height: 100vh;
+  width: 100vw;
+}
