--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 .login__card {
